--- a/etiket.html
+++ b/etiket.html
@@ -158,7 +158,7 @@
                             <div class="cont1">
                                 <div class="btn-text">Girişimci Paketi</div>
                                 <div class="price">
-                                    750 TL yerine <span>550 TL</span>'den<br>
+                                    2500 TL yerine <span>1500 TL</span>'den<br>
                                     başlayan fiyatlarla
                                 </div>
                                 <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates" style="width: 100%;margin-bottom: 15px;">SATIN AL</a href="#">
@@ -188,9 +188,9 @@
                                 </div>
                             </div>
                             <div class="cont1">
-                                <div class="btn-text">Başlangıç Paketi</div>
+                                <div class="btn-text">Kurumsal Paketi</div>
                                 <div class="price">
-                                    750 TL yerine <span>550 TL</span>'den<br>
+                                    5.000 TL yerine <span>3.250 TL</span>'den<br>
                                     başlayan fiyatlarla
                                 </div>
                                 <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates" style="width: 100%;margin-bottom: 15px;">SATIN AL</a href="#">
