--- a/etiket.html
+++ b/etiket.html
@@ -124,7 +124,9 @@
                                 </div>
                             </div>
                             <div class="cont1">
-                                <div class="btn-text">Başlangıç Paketi</div>
+                                <div class="alt-text">*3 adet reels tasarım
+*1 adet görsel tasarım
+*Özel gün tasarımı</div>
                                 <div class="price">
                                     750 TL yerine <span>550 TL</span>'den<br>
                                     başlayan fiyatlarla
