--- a/etiket.html
+++ b/etiket.html
@@ -126,7 +126,8 @@
                             <div class="cont1">
                                 <div class="alt-text">*3 adet reels tasarım
 *1 adet görsel tasarım
-*Özel gün tasarımı</div>
+*Özel gün tasarımı
+                                </div>
                                 <div class="price">
                                     750 TL yerine <span>550 TL</span>'den<br>
                                     başlayan fiyatlarla
@@ -158,7 +159,10 @@
                                 </div>
                             </div>
                             <div class="cont1">
-                                <div class="btn-text">Girişimci Paketi</div>
+                                <div class="alt-text">*10 adet reels tasarım
+*3 adet görsel tasarım
+*Özel Gün tasarımı
+                                </div>
                                 <div class="price">
                                     2500 TL yerine <span>1500 TL</span>'den<br>
                                     başlayan fiyatlarla
