--- a/etiket.html
+++ b/etiket.html
@@ -185,7 +185,7 @@
         
                 <div class="alt-foot">
                     <div class="btn-text">
-                       Kurumsal Paket !
+                       Kurumsal Paketi !
                     </div>
                         <div class="cont">
                             <div class="cont1">
@@ -194,7 +194,10 @@
                                 </div>
                             </div>
                             <div class="cont1">
-                                <div class="btn-text">Kurumsal Paketi</div>
+                                <div class="btn-text">* 20 adet reels tasarım
+* 7 adet görsel tasarım
+* Özel gün tasarımı
+                                </div>
                                 <div class="price">
                                     5.000 TL yerine <span>3.250 TL</span>'den<br>
                                     başlayan fiyatlarla
