--- a/etiket.html
+++ b/etiket.html
@@ -124,9 +124,9 @@
                                 </div>
                             </div>
                             <div class="cont1">
-                                <div class="alt-text">*3 adet reels tasarım
-*1 adet görsel tasarım
-*Özel gün tasarımı
+                                <div class="alt-text">*3 Adet Reels Tasarım
+*1 Adet Görsel Tasarım
+*Özel Gün Tasarımı
                                 </div>
                                 <div class="price">
                                     750 TL yerine <span>550 TL</span>'den<br>
@@ -159,9 +159,9 @@
                                 </div>
                             </div>
                             <div class="cont1">
-                                <div class="alt-text">*10 adet reels tasarım
-*3 adet görsel tasarım
-*Özel Gün tasarımı
+                                <div class="alt-text">*10 Adet Reels Tasarım
+*3 Adet Görsel Tasarım
+*Özel Gün Tasarımı
                                 </div>
                                 <div class="price">
                                     2500 TL yerine <span>1500 TL</span>'den<br>
@@ -190,13 +190,13 @@
                         <div class="cont">
                             <div class="cont1">
                                 <div class="img-secr">
-                                    <img src="for.jpg" alt="as">
+                                    <img src="for kurumsal.png" alt="as">
                                 </div>
                             </div>
                             <div class="cont1">
-                                <div class="btn-text">* 20 adet reels tasarım
-* 7 adet görsel tasarım
-* Özel gün tasarımı
+                                <div class="btn-text">*20 Adet Reels Tasarım
+*7 Adet Görsel Tasarım
+*Özel Gün Tasarımı
                                 </div>
                                 <div class="price">
                                     5.000 TL yerine <span>3.250 TL</span>'den<br>
