Update and rename etiket.html to sosyal-medya-paketleri.html

--- a/sosyal-medya-paketleri.html
+++ b/sosyal-medya-paketleri.html
@@ -105,7 +105,7 @@
                     <img src="6.png" alt="1">
                 </a>
             </div>
-            <div class="c-alt">Etiket Şablonları</div>
+            <div class="c-alt">Paketlerimiz</div>
         </div>
     </div>
 </div>
@@ -194,7 +194,7 @@
                                 </div>
                             </div>
                             <div class="cont1">
-                                <div class="btn-text">*20 Adet Reels Tasarım
+                                <div class="alt-text">*20 Adet Reels Tasarım
 *7 Adet Görsel Tasarım
 *Özel Gün Tasarımı
                                 </div>
