--- a/indirim-kampanya.html
+++ b/indirim-kampanya.html
@@ -105,7 +105,7 @@
                     <img src="6.png" alt="1">
                 </a>
             </div>
-            <div class="c-alt">Etiket Şablonları</div>
+            <div class="c-alt">Paketlerimiz</div>
         </div>
     </div>
 </div>
