--- a/index.html
+++ b/index.html
@@ -151,6 +151,10 @@
                                     <i class="fa-brands fa-youtube"></i>
                                 </div>
                             </a>
+                            <a href="https://www.shopier.com/ShowProductNew/storefront.php?shop=reelstemplate&sid=YmV3ZHVUaVd6ZVdUNzJYZDBfLTFfIF8g" target="_blank">
+                                <div class="social-links yo">
+                                    <i class="fa-brands fa-youtube"></i>
+                                </div>
                             <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0" target="_blank">
                                 <div style="background: #00BF22;" class="social-links">
                                     <i class="fa-brands fa-whatsapp"></i>
