--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             </a>
                             <a href="https://www.shopier.com/ShowProductNew/storefront.php?shop=reelstemplate&sid=YmV3ZHVUaVd6ZVdUNzJYZDBfLTFfIF8g" target="_blank">
                                 <div class="social-links yo">
-                                    <i class="fa-brands fa-youtube"></i>
+                                    <i class="fa-brands fa-shopier"></i>
                                 </div>
                             <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0" target="_blank">
                                 <div style="background: #00BF22;" class="social-links">
