--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                 <i class="fa-brands fa-instagram"></i>
                             </div>
                            </a>
-                            <a href="https://www.youtube.com/@reelsvideotemplate" target="_blank">
+                            <a href="https://www.youtube.com/@reelstemplate" target="_blank">
                                 <div class="social-links yo">
                                     <i class="fa-brands fa-youtube"></i>
                                 </div>
