--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="category">
         <div class="box-c">
             <div class="box">
-                <a href="indirim-kampanya.html">
+                <a href="">
                     <img src="1.png" alt="1">
                 </a>
             </div>
@@ -77,7 +77,7 @@
         </div>
         <div class="box-c">
             <div class="box">
-                <a href="duyuru.html">
+                <a href="">
                     <img src="3.png" alt="1">
                 </a>
             </div>
@@ -85,7 +85,7 @@
         </div>
         <div class="box-c">
             <div class="box">
-                <a href="kurumsal-tanitim.html">
+                <a href="">
                     <img src="4.png" alt="1">
                 </a>
             </div>
@@ -93,7 +93,7 @@
         </div>
         <div class="box-c">
             <div class="box">
-                <a href="fotograf-slayt.html">
+                <a href="">
                     <img src="5.png" alt="1">
                 </a>
             </div>
