--- a/sosyal-medya-paketleri.html
+++ b/sosyal-medya-paketleri.html
@@ -115,7 +115,7 @@
         
                 <div class="alt-foot">
                     <div class="btn-text">
-                        Başlangıç Paketi !
+                        1 Adet Reels Tasarım!
                     </div>
                         <div class="cont">
                             <div class="cont1">
@@ -124,9 +124,7 @@
                                 </div>
                             </div>
                             <div class="cont1">
-                                <div class="alt-text">*3 Adet Reels Tasarım
-*1 Adet Görsel Tasarım
-*Özel Gün Tasarımı
+                                <div class="alt-text">*1 Adet Reels Tasarım
                                 </div>
                                 <div class="price">
                                     750 TL yerine <span>550 TL</span> <br>
