--- a/sosyal-medya-paketleri.html
+++ b/sosyal-medya-paketleri.html
@@ -148,7 +148,7 @@
         
                 <div class="alt-foot">
                     <div class="btn-text">
-                       Girişimci Paketi !
+                       Başlangıç Paketi !
                     </div>
                         <div class="cont">
                             <div class="cont1">
@@ -157,12 +157,10 @@
                                 </div>
                             </div>
                             <div class="cont1">
-                                <div class="alt-text">*10 Adet Reels Tasarım
-*3 Adet Görsel Tasarım
-*Özel Gün Tasarımı
+                                <div class="alt-text">*3 Adet Reels Tasarım
                                 </div>
                                 <div class="price">
-                                    2500 TL yerine <span>1500 TL</span> <br>
+                                    1250 TL TL yerine <span>950 TL</span> <br>
                                     
                                 </div>
                                 <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates" style="width: 100%;margin-bottom: 15px;">SATIN AL</a href="#">
