--- a/sosyal-medya-paketleri.html
+++ b/sosyal-medya-paketleri.html
@@ -115,7 +115,7 @@
         
                 <div class="alt-foot">
                     <div class="btn-text">
-                       Reels Tasarım Paketlerimiz !
+                       Reels Tasarım Paketi !
                     </div>
                         <div class="cont">
                             <div class="cont1">
