--- a/sosyal-medya-paketleri.html
+++ b/sosyal-medya-paketleri.html
@@ -157,7 +157,7 @@
                                 </div>
                             </div>
                             <div class="cont1">
-                                <div class="alt-text">*3 Adet Reels Tasarım
+                                <div class="alt-text">Sosyal Medya Avantajdır !
                                 </div>
                                 <div class="price">
                                     450 TL yerine <span>350 TL</span> <br>
