--- a/sosyal-medya-paketleri.html
+++ b/sosyal-medya-paketleri.html
@@ -130,7 +130,7 @@
                                     750 TL yerine <span>550 TL</span> <br>
                                    
                                 </div>
-                                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates" style="width: 100%;margin-bottom: 15px;">SATIN AL</a href="#">
+                                <a href="https://www.shopier.com/ShowProductNew/storefront.php?shop=reelstemplate&sid=aFI4T25JN2x0WU9mbTY1djBfLTFfUmVlbHMlMjBUYXNhciVDNCVCMW0lMjBQYWtldGlfIA==#Reels%20Tasar%C4%B1m%20Paketi" target="_blank" class="creates" style="width: 100%;margin-bottom: 15px;">SATIN AL</a href="#">
                                     <div class="alt-text">
                                         Banka havalesi ile ödemede %5 İndirim <br>
                                         <div class="alt-t">Albaraka/Fatih Topçu  : TR 44 0020 3000 0344 7998 0000 01</div>
