--- a/sosyal-medya-paketleri.html
+++ b/sosyal-medya-paketleri.html
@@ -163,7 +163,7 @@
                                     450 TL yerine <span>350 TL</span> <br>
                                     
                                 </div>
-                                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates" style="width: 100%;margin-bottom: 15px;">SATIN AL</a href="#">
+                                <a href="https://www.shopier.com/ShowProductNew/storefront.php?shop=reelstemplate&sid=Y2x2dzhKSEsxTWFDZEFFbTBfLTFfRyVDMyVCNnJzZWwlMjBUYXNhciVDNCVCMW0lMjBQYWtldGlfIA==#G%C3%B6rsel%20Tasar%C4%B1m%20Paketi" target="_blank" class="creates" style="width: 100%;margin-bottom: 15px;">SATIN AL</a href="#">
                                     <div class="alt-text">
                                         Banka havalesi ile ödemede %5 İndirim <br>
                                         <div class="alt-t">Albaraka/Fatih Topçu  : TR 44 0020 3000 0344 7998 0000 01</div>
