--- a/sosyal-medya-paketleri.html
+++ b/sosyal-medya-paketleri.html
@@ -127,7 +127,7 @@
                                 <div class="alt-text">Sosyal Medya Avantajdır !
                                 </div>
                                 <div class="price">
-                                    750 TL yerine <span>550 TL</span> <br>
+                                    750 TL yerine <span>550 TL</span> başlayan fiyatlarla<br>
                                    
                                 </div>
                                 <a href="https://www.shopier.com/ShowProductNew/storefront.php?shop=reelstemplate&sid=aFI4T25JN2x0WU9mbTY1djBfLTFfUmVlbHMlMjBUYXNhciVDNCVCMW0lMjBQYWtldGlfIA==#Reels%20Tasar%C4%B1m%20Paketi" target="_blank" class="creates" style="width: 100%;margin-bottom: 15px;">SATIN AL</a href="#">
