--- a/index.html
+++ b/index.html
@@ -399,12 +399,12 @@
                                 </div>
                             </div>
                             <div class="cont1">
-                                <div class="btn-text">Başlangıç Paketi</div>
+                                <div class="btn-text">Hemen Sipariş Ver ! !</div>
                                 <div class="price">
                                     750 TL yerine <span>550 TL</span>'den<br>
                                     başlayan fiyatlarla
                                 </div>
-                                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates" style="width: 100%;margin-bottom: 15px;">SATIN AL</a href="#">
+                                <a href="https://www.shopier.com/ShowProductNew/storefront.php?shop=reelstemplate&sid=SlRKWDM2cGZQbUtwUmRHczBfNF8gXyA=#Reels%20Tasar%C4%B1m%20Paketi" target="_blank" class="creates" style="width: 100%;margin-bottom: 15px;">SATIN AL</a href="#">
                                     <div class="alt-text">
                                         Banka havalesi ile ödemede %5 İndirim <br>
                                         <div class="alt-t">Albaraka/Fatih Topçu  : TR 44 0020 3000 0344 7998 0000 01</div>
