--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             <div class="sol">
                 <div class="banner">
                     <h1>
-                        Yüksek Kaliteli videolar oluşturmak için tek yapmanız gereken bizimle iletişime geçmek !
+                        Hedeflerinize ulaşmak için bizimle iletişime geçin !
                     </h1>
                     <h2>
-                        Profesyonel şablonları kullanarak
-                        işletmeniz için animasyonlu videolar paylaşın!
+                        Dikkat çekiçi görsel ve video tasarımlar ile
+                        dijital pazarlama çalışmalarınızın karşılığını en iyi şekilde almanız için size yardımcı olalım.
                         <div class="buttons">
                             <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0" target="_blank" class="create wh-bg">Whatsapp İletişim</a>
                         </div>
