--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         <div class="alt-footv2">
             <div style="color: crimson;" class="head-text">
-                Kendi markanıza özel tamamen özelleştirilebilir reels şablonlar!
+                Hedefinizi bize bildirin, çekici tasarımlar ile istenen sonuçlara ulaşın.Dünya sizi tanısın !
             </div>
             <div class="cont">
                 <div class="con">
