--- a/sosyal-medya-paketleri.html
+++ b/sosyal-medya-paketleri.html
@@ -105,7 +105,7 @@
                     <img src="6.png" alt="1">
                 </a>
             </div>
-            <div class="c-alt">Reels Tasarım Paketi</div>
+            <div class="c-alt">Paketlerimiz</div>
         </div>
     </div>
 </div>
