--- a/duyuru.html
+++ b/duyuru.html
@@ -101,7 +101,7 @@
         </div>
         <div class="box-c">
             <div class="box">
-                <a href="etiket.html">
+                <a href="sosyal-medya-paketleri.html">
                     <img src="6.png" alt="1">
                 </a>
             </div>
