--- a/index.html
+++ b/index.html
@@ -180,12 +180,12 @@
                             <div class="cont1">
                                 <div class="btn-text">Hemen Sipariş Ver !</div>
                                 <div class="price">
-                                    500 TL yerine <span>350 TL</span>'den<br>
+                                    500 TL yerine <span>175 TL</span>'den<br>
                                     başlayan fiyatlarla
                                 </div>
                                 <a href="https://www.shopier.com/ShowProductNew/storefront.php?shop=reelstemplate&sid=N1FZWm9Yd21YTUFqRG5yTDBfLTFfRyVDMyVCNnJzZWwlMjBUYXNhciVDNCVCMW0lMjBQYWtldGlfIA==#G%C3%B6rsel%20Tasar%C4%B1m%20Paketi" target="_blank" class="creates" style="width: 100%;margin-bottom: 15px;">SATIN AL</a href="#">
                                     <div class="alt-text">
-                                        Banka havalesi ile ödemede %5 İndirim <br>
+                                        Eft/Havale Hesap Numaramız <br>
                                         <div class="alt-t">Albaraka/Fatih Topçu  : TR 44 0020 3000 0344 7998 0000 01</div>
                                          <div class="buttons">
                             <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0" target="_blank" class="create wh-bg">Whatsapp İletişim</a>
@@ -216,7 +216,7 @@
                                 </div>
                                 <a href="https://www.shopier.com/ShowProductNew/storefront.php?shop=reelstemplate&sid=SlRKWDM2cGZQbUtwUmRHczBfNF8gXyA=#Reels%20Tasar%C4%B1m%20Paketi" target="_blank" class="creates" style="width: 100%;margin-bottom: 15px;">SATIN AL</a href="#">
                                     <div class="alt-text">
-                                        Banka havalesi ile ödemede %5 İndirim <br>
+                                        Eft/Havale Hesap Numaramız <br>
                                         <div class="alt-t">Albaraka/Fatih Topçu  : TR 44 0020 3000 0344 7998 0000 01</div>
                                          <div class="buttons">
                             <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0" target="_blank" class="create wh-bg">Whatsapp İletişim</a>
