--- a/sosyal-medya-paketleri.html
+++ b/sosyal-medya-paketleri.html
@@ -162,7 +162,7 @@
                                 </div>
                                 <a href="https://www.shopier.com/ShowProductNew/storefront.php?shop=reelstemplate&sid=aFI4T25JN2x0WU9mbTY1djBfLTFfUmVlbHMlMjBUYXNhciVDNCVCMW0lMjBQYWtldGlfIA==#Reels%20Tasar%C4%B1m%20Paketi" target="_blank" class="creates" style="width: 100%;margin-bottom: 15px;">SATIN AL</a href="#">
                                     <div class="alt-text">
-                                        Banka havalesi ile ödemede %5 İndirim <br>
+                                        Eft/Havale Hesap Numaramız <br>
                                         <div class="alt-t">Albaraka/Fatih Topçu  : TR 44 0020 3000 0344 7998 0000 01</div>
                                          <div class="buttons">
                             <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0" target="_blank" class="create wh-bg">Whatsapp İletişim</a>
