--- a/sosyal-medya-paketleri.html
+++ b/sosyal-medya-paketleri.html
@@ -452,8 +452,6 @@
                     <div class="text-comte">
                         <div class="detail">
                         </div>
-                        <ul>                        
-                        </ul>
                         <div class="detail">
                             Detaylı bilgi için mesaj gönderebilirsiniz
                         </div>
@@ -473,6 +471,8 @@
                                     <i class="fa-brands fa-whatsapp"></i>
                                 </div>
                             </a>
+                            <div class="alt">
+                <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates">Satın Al</a>
                         </div>
                     </div>
                 </div>
