--- a/sosyal-medya-paketleri.html
+++ b/sosyal-medya-paketleri.html
@@ -416,9 +416,7 @@
                                     <i class="fa-brands fa-youtube"></i>
                                 </div>
                             </a>
-                            <a href="https://www.shopier.com/ShowProductNew/storefront.php?shop=reelstemplate&sid=YmV3ZHVUaVd6ZVdUNzJYZDBfLTFfIF8g" target="_blank">
-                                <div class="social-links yo">
-                                    <i class="fa-brands fa-shopier.png"></i>
+                            <a href="http://www.shopier.com/reelstemplate" target="_blank" class="creates">Satın Al</a>
                                 </div>
                             <a href="https://api.whatsapp.com/send/?phone=905347815105&text&type=phone_number&app_absent=0" target="_blank">
                                 <div style="background: #00BF22;" class="social-links">
